@@ -83,14 +83,6 @@ public class BlockTokenSecretManager
   
   protected SecureRandom nonceGenerator = new SecureRandom();
 
-  public static enum AccessMode {
-    READ,
-    WRITE,
-    COPY,
-    REPLACE
-  }
-
-  ;
   
   /**
    * Constructor for slaves.
@@ -266,7 +258,7 @@ public class BlockTokenSecretManager
    * Generate an block token for current user
    */
   public Token<BlockTokenIdentifier> generateToken(ExtendedBlock block,
-      EnumSet<AccessMode> modes) throws IOException {
+      EnumSet<BlockTokenIdentifier.AccessMode> modes) throws IOException {
     UserGroupInformation ugi = UserGroupInformation.getCurrentUser();
     String userID = (ugi == null ? null : ugi.getShortUserName());
     return generateToken(userID, block, modes);
@@ -276,11 +268,10 @@ public class BlockTokenSecretManager
    * Generate a block token for a specified user
    */
   public Token<BlockTokenIdentifier> generateToken(String userId,
-      ExtendedBlock block, EnumSet<AccessMode> modes) throws IOException {
-    BlockTokenIdentifier id =
-        new BlockTokenIdentifier(userId, block.getBlockPoolId(),
-            block.getBlockId(), modes);
-    return new Token<>(id, this);
+      ExtendedBlock block, EnumSet<BlockTokenIdentifier.AccessMode> modes) throws IOException {
+    BlockTokenIdentifier id = new BlockTokenIdentifier(userId, block
+        .getBlockPoolId(), block.getBlockId(), modes);
+    return new Token<BlockTokenIdentifier>(id, this);
   }
 
   /**
@@ -289,7 +280,7 @@ public class BlockTokenSecretManager
    * when token password has already been verified (e.g., in the RPC layer).
    */
   public void checkAccess(BlockTokenIdentifier id, String userId,
-      ExtendedBlock block, AccessMode mode) throws InvalidToken {
+      ExtendedBlock block, BlockTokenIdentifier.AccessMode mode) throws InvalidToken {
     if (LOG.isDebugEnabled()) {
       LOG.debug("Checking access for user=" + userId + ", block=" + block +
           ", access mode=" + mode + " using " + id.toString());
@@ -324,7 +315,7 @@ public class BlockTokenSecretManager
    * Check if access should be allowed. userID is not checked if null
    */
   public void checkAccess(Token<BlockTokenIdentifier> token, String userId,
-      ExtendedBlock block, AccessMode mode) throws InvalidToken {
+      ExtendedBlock block, BlockTokenIdentifier.AccessMode mode) throws InvalidToken {
     BlockTokenIdentifier id = new BlockTokenIdentifier();
     try {
       id.readFields(
