@@ -153,7 +153,7 @@ public class TestBlockToken {
         LOG.info("Got: " + id.toString());
         assertTrue("Received BlockTokenIdentifier is wrong", ident.equals(id));
         sm.checkAccess(id, null, PBHelper.convert(req.getBlock()),
-            BlockTokenSecretManager.AccessMode.WRITE);
+            BlockTokenIdentifier.AccessMode.WRITE);
         result = id.getBlockId();
       }
       return GetReplicaVisibleLengthResponseProto.newBuilder().setLength(result)
@@ -163,7 +163,7 @@ public class TestBlockToken {
 
   private BlockTokenIdentifier generateTokenId(BlockTokenSecretManager sm,
       ExtendedBlock block,
-      EnumSet<BlockTokenSecretManager.AccessMode> accessModes)
+      EnumSet<BlockTokenIdentifier.AccessMode> accessModes)
       throws IOException {
     Token<BlockTokenIdentifier> token = sm.generateToken(block, accessModes);
     BlockTokenIdentifier id = sm.createIdentifier();
@@ -179,17 +179,17 @@ public class TestBlockToken {
         new NameNodeBlockTokenSecretManager(blockKeyUpdateInterval,
             blockTokenLifetime, "fake-pool", null, new MyLeaderNameSystem());
     TestWritable.testWritable(generateTokenId(sm, block1,
-        EnumSet.allOf(BlockTokenSecretManager.AccessMode.class)));
+        EnumSet.allOf(BlockTokenIdentifier.AccessMode.class)));
     TestWritable.testWritable(generateTokenId(sm, block2,
-        EnumSet.of(BlockTokenSecretManager.AccessMode.WRITE)));
+        EnumSet.of(BlockTokenIdentifier.AccessMode.WRITE)));
     TestWritable.testWritable(generateTokenId(sm, block3,
-        EnumSet.noneOf(BlockTokenSecretManager.AccessMode.class)));
+        EnumSet.noneOf(BlockTokenIdentifier.AccessMode.class)));
   }
 
   private void tokenGenerationAndVerification(BlockTokenSecretManager master,
       BlockTokenSecretManager slave) throws Exception {
     // single-mode tokens
-    for (BlockTokenSecretManager.AccessMode mode : BlockTokenSecretManager.AccessMode
+    for (BlockTokenIdentifier.AccessMode mode : BlockTokenIdentifier.AccessMode
         .values()) {
       // generated by master
       Token<BlockTokenIdentifier> token1 =
@@ -204,8 +204,8 @@ public class TestBlockToken {
     }
     // multi-mode tokens
     Token<BlockTokenIdentifier> mtoken = master.generateToken(block3,
-        EnumSet.allOf(BlockTokenSecretManager.AccessMode.class));
-    for (BlockTokenSecretManager.AccessMode mode : BlockTokenSecretManager.AccessMode
+        EnumSet.allOf(BlockTokenIdentifier.AccessMode.class));
+    for (BlockTokenIdentifier.AccessMode mode : BlockTokenIdentifier.AccessMode
         .values()) {
       master.checkAccess(mtoken, null, block3, mode);
       slave.checkAccess(mtoken, null, block3, mode);
@@ -266,7 +266,7 @@ public class TestBlockToken {
         new NameNodeBlockTokenSecretManager(blockKeyUpdateInterval,
             blockTokenLifetime, "fake-pool", null, new MyLeaderNameSystem());
     Token<BlockTokenIdentifier> token = sm.generateToken(block3,
-        EnumSet.allOf(BlockTokenSecretManager.AccessMode.class));
+        EnumSet.allOf(BlockTokenIdentifier.AccessMode.class));
 
     final Server server = createMockDatanode(sm, token, conf);
 
@@ -306,7 +306,7 @@ public class TestBlockToken {
         new NameNodeBlockTokenSecretManager(blockKeyUpdateInterval,
             blockTokenLifetime, "fake-pool", null, new MyLeaderNameSystem());
     Token<BlockTokenIdentifier> token = sm.generateToken(block3,
-        EnumSet.allOf(BlockTokenSecretManager.AccessMode.class));
+        EnumSet.allOf(BlockTokenIdentifier.AccessMode.class));
 
     final Server server = createMockDatanode(sm, token, conf);
     server.start();
