@@ -430,7 +430,7 @@ public class TestBlockTokenWithDFS {
       tryRead(conf, lblock, false);
       // use a valid new token
       lblock.setBlockToken(sm.generateToken(lblock.getBlock(),
-          EnumSet.of(BlockTokenSecretManager.AccessMode.READ)));
+              EnumSet.of(BlockTokenIdentifier.AccessMode.READ)));
       // read should succeed
       tryRead(conf, lblock, true);
       // use a token with wrong blockID
@@ -438,14 +438,14 @@ public class TestBlockTokenWithDFS {
           new ExtendedBlock(lblock.getBlock().getBlockPoolId(),
               lblock.getBlock().getBlockId() + 1);
       lblock.setBlockToken(sm.generateToken(wrongBlock,
-          EnumSet.of(BlockTokenSecretManager.AccessMode.READ)));
+          EnumSet.of(BlockTokenIdentifier.AccessMode.READ)));
       // read should fail
       tryRead(conf, lblock, false);
       // use a token with wrong access modes
-      lblock.setBlockToken(sm.generateToken(lblock.getBlock(), EnumSet
-              .of(BlockTokenSecretManager.AccessMode.WRITE,
-                  BlockTokenSecretManager.AccessMode.COPY,
-                  BlockTokenSecretManager.AccessMode.REPLACE)));
+      lblock.setBlockToken(sm.generateToken(lblock.getBlock(),
+          EnumSet.of(BlockTokenIdentifier.AccessMode.WRITE,
+                     BlockTokenIdentifier.AccessMode.COPY,
+                     BlockTokenIdentifier.AccessMode.REPLACE)));
       // read should fail
       tryRead(conf, lblock, false);
 
